# NHL_stats

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  nhl_client.rs
src/nhl_client/: clubs.rs  game.rs  goalies.rs  player.rs  roster.rs  schedule.rs  scores.rs  skaters.rs  teams.rs
tests/: intergration.rs
