[package]
name = "nhl_data"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A way to call the NHL api for rust programs"
repository = "https://github.com/iammarshallnz/nhl_data"
authors = ["Marshall Inch"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }